using @Builder appropriate and of each entity | new logic for refreshing tokens | moved project + one folder